<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail"
    tools:context=".views.details.DetailActivity">
    <!--  -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:id="@+id/progress_bar"
            android:indeterminate="true"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true" />
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <android.support.v7.widget.CardView
                app:cardBackgroundColor="@color/icons"
                app:cardElevation="12dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_margin="14dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/lbl_title"
                        android:textColor="@color/primaryText"
                        android:text="@string/app_name"
                        android:ellipsize="end"
                        android:textSize="28sp"
                        android:maxLines="2"
                        android:gravity="center_vertical"
                        android:layout_margin="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="80dp" />
                    <TextView
                        android:id="@+id/lbl_description"
                        android:drawableStart="@drawable/ic_description"
                        android:drawablePadding="16dp"
                        android:text="@string/lbl_synopsis"
                        android:textSize="16sp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:maxLines="12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:minHeight="48dp"/>
                    <TextView
                        android:id="@+id/lbl_date"
                        android:drawableStart="@drawable/ic_calendar"
                        android:drawablePadding="16dp"
                        android:text="@string/lbl_date_release"
                        android:textSize="18sp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:minHeight="48dp"/>
                    <TextView
                        android:id="@+id/lbl_genres"
                        android:drawableStart="@drawable/ic_genres"
                        android:drawablePadding="16dp"
                        android:text="@string/lbl_genres"
                        android:textSize="18sp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:maxLines="4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:minHeight="48dp"/>
                    <TextView
                        android:id="@+id/lbl_seasons"
                        android:drawableStart="@drawable/ic_season"
                        android:visibility="gone"
                        android:drawablePadding="16dp"
                        android:text="@string/lbl_seasons"
                        android:textSize="18sp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:maxLines="4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:minHeight="48dp"/>
                    <TextView
                        android:id="@+id/lbl_link"
                        android:drawableStart="@drawable/ic_link"
                        android:drawablePadding="16dp"
                        android:text="@string/lbl_homepage"
                        android:textSize="18sp"
                        android:gravity="center|start"
                        android:textColor="@color/secondaryText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:minHeight="48dp"/>
                    <View
                        android:layout_marginTop="10dp"
                        android:background="@color/divider"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/lbl_popularity"
                            android:drawableStart="@drawable/ic_popularity"
                            android:drawablePadding="16dp"
                            android:text="@string/lbl_popularity"
                            android:textSize="18sp"
                            android:gravity="center|start"
                            android:textColor="@color/secondaryText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="48dp"/>
                        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                            android:id="@+id/rating_bar"
                            android:stepSize="0.01"
                            app:mrb_secondaryProgressTint="@color/colorPrimary"
                            app:mrb_progressTint="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialRatingBar.RatingBar" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>