<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/icons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/lbl_title_dialog"
            android:padding="16dp"
            android:text="@string/lbl_title_dialog"
            android:textColor="@color/primaryText"
            android:textSize="19sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/secondaryText"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@drawable/background_view_divider"
                android:orientation="vertical"
                android:padding="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner_categories"
                    android:textSize="14sp"
                    android:textColor="@color/primaryText"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/but_cancel"
                android:text="@string/but_cancel"
                android:textSize="14sp"
                android:textColor="@color/secondaryText"
                android:textAllCaps="false"
                android:background="@drawable/background_button_cancel"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_width="100dp"
                android:layout_height="35dp"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/but_done"
                android:text="@string/but_done"
                android:textSize="14sp"
                android:textColor="@color/icons"
                android:textAllCaps="false"
                android:background="@drawable/background_button_done"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_width="100dp"
                android:layout_height="35dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>